--- a/backendserver1/package.json
+++ b/backendserver1/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
