--- a/backendserver1/package.json
+++ b/backendserver1/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "express": "^5.1.0",
     "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.5",
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "jest": "^30.1.3",
+    "socket.io-client": "^4.8.1",
     "supertest": "^7.1.4"
   }
 }
