--- a/backendserver1/package.json
+++ b/backendserver1/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "jest": "^30.1.3",
     "socket.io-client": "^4.8.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.4"
   }
 }
